--- a/style.css
+++ b/style.css
@@ -4,4 +4,6 @@
 
 #second{
   color: blue;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
